# ChangeLog for x11-themes/gtk-engines
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines/ChangeLog,v 1.29 2005/06/23 07:45:21 gmsoft Exp $

  23 Jun 2005; Guy Martin <gmsoft@gentoo.org> gtk-engines-2.6.3.ebuild:
  Stable on hppa.

  13 Jun 2005; Markus Rothe <corsair@gentoo.org> gtk-engines-2.6.3.ebuild:
  Stable on ppc64

  12 Jun 2005; Olivier Crête <tester@gentoo.org> gtk-engines-2.6.3.ebuild:
  Stable on amd64

  12 Jun 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  gtk-engines-2.6.3.ebuild:
  Stable on ppc.

  12 Jun 2005; Bryan Østergaard <kloeri@gentoo.org>
  gtk-engines-2.6.3.ebuild:
  Stable on alpha.

  09 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  gtk-engines-2.6.3.ebuild:
  Stable on sparc

  04 Jun 2005; Leonardo Boshell <leonardop@gentoo.org>
  gtk-engines-2.6.2.ebuild, gtk-engines-2.6.3.ebuild:
  Restrict the block with gtk-engines-thinice. See bug #46357.

  12 May 2005; Joe McCann <joem@gentoo.org>
  +files/gtk-engines-2.6.3-fix_clearlooks_path.patch,
  gtk-engines-2.6.3.ebuild:
  Add patch from bug 89626 to install clearlooks engine in proper location.
  Thanks to Gad Kadoshfor reporting

*gtk-engines-2.6.3 (18 Apr 2005)

  18 Apr 2005; Joe McCann <joem@gentoo.org> +gtk-engines-2.6.3.ebuild:
  bugfix release

*gtk-engines-2.6.2 (09 Mar 2005)

  09 Mar 2005; Joe McCann <joem@gentoo.org> +gtk-engines-2.6.2.ebuild:
  gnome-2.10 version

  27 Jul 2004; Tom Gall <tgall@gentoo.org> gtk-engines-2.2.0.ebuild:
  stable on ppc64, bug #58191

  01 Jul 2004; Tom Gall <tgall@gentoo.org> gtk-engines-2.2.0.ebuild:
  added ~ppc64, bug #54806

  13 May 2004; Stephen P. Becker <geoman@gentoo.org> gtk-engines-2.2.0.ebuild:
  Stable on mips.

  17 Apr 2004; Alastair Tse <liquidx@gentoo.org> gtk-engines-2.2.0.ebuild:
  replace newdepend

  14 Mar 2004; Stephen P. Becker <geoman@gentoo.org> gtk-engines-2.2.0.ebuild:
  Added ~mips keyword.
