@@ -1,12 +1,12 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines/Attic/gtk-engines-2.2.0.ebuild,v 1.22 2005/06/04 20:22:30 leonardop Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines/Attic/gtk-engines-2.2.0.ebuild,v 1.23 2005/06/30 23:21:55 leonardop Exp $
 
 inherit gtk-engines2 gnuconfig
 
 GTK1_VER="0.12"
 GTK2_VER="${PV}"
-PVP=($(echo " $PV " | sed 's:[-\._]: :g'))
+PVP=(${PV//[-._]/ })
 
 DESCRIPTION="GTK+1 and GTK+2 Theme Engines from GNOME including Pixmap, Metal, Raleigh, Redmond95, Raleigh and Notif"
 SRC_URI="mirror://gnome/sources/${PN}/${GTK1_VER}/${PN}-${GTK1_VER}.tar.gz
@@ -16,13 +16,6 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="x86 ppc sparc alpha hppa amd64 ia64 mips ppc64 arm"
 IUSE=""
-
-#PROVIDE="x11-themes/gtk-engines-metal 
-#	x11-themes/gtk-engines-notif 
-#	x11-themes/gtk-engines-pixmap 
-#	x11-themes/gtk-engines-pixbuf 
-#	x11-themes/gtk-engines-raleigh
-#	x11-themes/gtk-engines-redmond95"
 
 [ -n "${HAS_GTK1}" ] && DEPEND="${DEPEND} >=media-libs/imlib-1.8"
 
