@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gtk-engines
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines/ChangeLog,v 1.29 2005/06/23 07:45:21 gmsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines/ChangeLog,v 1.30 2005/06/30 23:21:55 leonardop Exp $
+
+  30 Jun 2005; Leonardo Boshell <leonardop@gentoo.org>
+  gtk-engines-2.2.0.ebuild, gtk-engines-2.6.2.ebuild,
+  gtk-engines-2.6.3.ebuild:
+  Remove 'sed' use from the global scope. Thanks to Georgi Georgiev for the
+  contribution on bug #91517.
 
   23 Jun 2005; Guy Martin <gmsoft@gentoo.org> gtk-engines-2.6.3.ebuild:
   Stable on hppa.
